# text-to-geometry

./: .cursorignore  .env.example  .gitignore  CMakeLists.txt  ImageToStl.com_Magsafe+55,9+mm+Lampe.stl  README.md  RENDERING_SETUP.md  architecture.md  chaos_ambition.wgsl  dna_sculpture.wgsl  gyroid_infill.wgsl  notes.md  notes.pages  package-lock.json  serve_viewer.py  server.py  startupscript.zsh  training.pages  void_core.wgsl  werkzeug_socketio_compat.py
.github/workflows/: test.yml
agent/: brep_agent.py  brep_exporter.py  brep_preview.py  brep_tools.py  brep_validator.py  cadquery_primitives.py  headless_renderer.py  inference.py  mesh_exporter.py  requirements.txt  sdf_library.wgsl  tools.py  wgsl_agent.py  wgsl_validator.py
agent/experiments/: 50_PROMPTS_RESULTS.md  BENCHMARK_RATINGS.md  EXPERIMENTS.md  __init__.py  aggregate_benchmark_ratings.py  archive_vl_benchmark_log.py  benchmark_aggregate.json  benchmark_minute_scores.sh  benchmark_models.py  plot_50_prompts_results.py  plot_benchmark_comparison.py  requirements-plots.txt  run_multi_llm_benchmark.py  test_prompts.py
agent/experiments/data/: 50_prompts_scores.json
agent/experiments/logs/: cmd_test.txt
agent/experiments/outputs/: RUN_SUMMARY.txt  all_wgsl_codes.json
agent/experiments/outputs/by_model/: manifest.json
agent/experiments/outputs/by_model/Qwen_Qwen2.5-Coder-32B-Instruct/: 01_L-bracket_STEPS.wgsl  results.json
agent/experiments/outputs/by_model/Qwen_Qwen3-14B-FP8/: 01_L-bracket_STEPS.wgsl  results.json
agent/experiments/outputs/by_model/Qwen_Qwen3-32B-FP8/: 01_L-bracket_STEPS.wgsl  02_I-beam_STEPS.wgsl  03_Gear_blank_STEPS.wgsl  04_Flanged_bearing_STEPS.wgsl  05_Rivet_STEPS.wgsl  06_D-pull_handle_STEPS.wgsl  07_Eccentric_cam_STEPS.wgsl  08_Four-blade_fan_hub_STEPS.wgsl  09_Hollow_square_tube_STEPS.wgsl  10_Grille_plate_STEPS.wgsl  11_L-bracket.wgsl  12_I-beam.wgsl  13_Gear_blank.wgsl  14_Flanged_bearing.wgsl  15_Rivet.wgsl  16_D-pull_handle.wgsl  17_Eccentric_cam.wgsl  18_Fan_hub_four_blades.wgsl  19_Hollow_square_tube.wgsl  20_Grille_plate.wgsl  21_L-shaped_mounting_bracket.wgsl  22_Structural_I-beam_segment.wgsl  23_Gear_blank_disc.wgsl  24_Flanged_bearing_housing.wgsl  25_Rivet_fastener.wgsl  26_Cabinet_D-pull_handle.wgsl  27_Eccentric_cam_plate.wgsl  28_Fan_hub.wgsl  29_Hollow_square_structural_tube.wgsl  30_Perforated_grille.wgsl  31_Small_shelf_angle_bracket..wgsl  32_Short_piece_of_I-beam..wgsl  33_Drilled_gear_disc..wgsl  34_Bearing_with_a_flange..wgsl  35_Pop_rivet_shape..wgsl  36_Drawer_pull..wgsl  37_Offset_cam_for_a_latch..wgsl  38_Plastic_fan_wheel_blank..wgsl  39_Hollow_square_leg..wgsl  40_Vent_cover_with_slots..wgsl  (+7 more)
agent/experiments/outputs/by_model/THUDM_GLM-Z1-32B-0414/: results.json
agent/experiments/outputs/by_model/deepseek-ai_DeepSeek-R1-Distill-Qwen-32B/: 01_L-bracket_STEPS.wgsl  02_I-beam_STEPS.wgsl  03_Gear_blank_STEPS.wgsl  04_Flanged_bearing_STEPS.wgsl  05_Rivet_STEPS.wgsl  06_D-pull_handle_STEPS.wgsl  07_Eccentric_cam_STEPS.wgsl  08_Four-blade_fan_hub_STEPS.wgsl  09_Hollow_square_tube_STEPS.wgsl  10_Grille_plate_STEPS.wgsl  11_L-bracket.wgsl  12_I-beam.wgsl  13_Gear_blank.wgsl  14_Flanged_bearing.wgsl  15_Rivet.wgsl  16_D-pull_handle.wgsl  17_Eccentric_cam.wgsl  18_Fan_hub_four_blades.wgsl  19_Hollow_square_tube.wgsl  20_Grille_plate.wgsl  21_L-shaped_mounting_bracket.wgsl  22_Structural_I-beam_segment.wgsl  23_Gear_blank_disc.wgsl  24_Flanged_bearing_housing.wgsl  25_Rivet_fastener.wgsl  (+22 more)
agent/models/: iphone_16_pro_stand.py  iphone_16_pro_stand.stl
agent/tests/: test_brep_agent.py  test_brep_exporter.py  test_brep_preview.py  test_brep_tools.py  test_brep_validator.py  test_cadquery_primitives.py  test_server.py  test_wgsl_agent.py  test_wgsl_validator.py
benchmarks/: launch_config_bench.cpp
bindings/: pybind_compile.cpp
include/frontend/: ir.h  lexer.h
include/kernel/: accum_transform.h  builder.h  codegen_cuda.h  cuda_renderer.h  flat_ir.h  handle.h  intern.h  lower.h  node.h  optimise.h  pack_for_webgpu.h  param_extract.h  unparse_dsl.h
litellm/: .env  config.yaml  requirements.txt  run.sh
print_backend/: README.md  __init__.py  auth_jwt.py  db.py  job_service.py  models.py  notify_discord.py  routes_api.py
print_backend/printing/: __init__.py  estimates.py  validation.py
print_backend/tests/: conftest.py  test_print_api.py
scripts/: e2e_prompt_bar.py  install_gpu_driver_gce.sh  start-litellm-for-claude-code.sh  vastai_reactivate_and_build.sh
server/: requirements.txt  scene_server.py
src/frontend/: lexer.cpp  parser.cpp
src/kernel/: accum_transform.cpp  builder.cpp  codegen_cuda.cpp  cuda_renderer.cpp  intern.cpp  lower.cpp  optimise.cpp  pack_for_webgpu.cpp  param_extract.cpp  unparse_dsl.cpp
src/viewer/: main.cpp
templates/: admin_print_jobs.html
tests/: codegen_cuda_tests.cpp  dag_builder_tests.cpp  eval_dag.h  eval_flat_ir.h  flat_ir_tests.cpp  ir_tests.cpp  lower_tests.cpp  optimise_tests.cpp  pack_for_webgpu_tests.cpp  param_extract_tests.cpp  render_tests.cpp  test_server.py  unparse_dsl_tests.cpp
text-to-dsl/: DSL_SPEC.md  FINETUNING.md  TEST-chatbot_cli.py  agent.py  agent_context.py  agent_edits.py  agent_tools.py  evaluator_cache.py  grammar.ebnf  grammar.gbnf  grammar_choice_inference.gbnf  grammar_choice_training.gbnf  grammar_edit_dsl.gbnf  grammar_edit_plan.gbnf  grammar_plan.gbnf  inference.py  loss.py  mock-dsl.txt  optimise_dsl.py  optimise_params.py  requirements.txt  sdf_module.py  target_sdf.py  topology_hash.py  validate_dsl.cpp
text-to-dsl/mock-tests/: chatbot.py  mock-dsl.txt  mock-flatir.txt
text-to-dsl/tests/: test_agent_context.py  test_agent_edits.py  test_agent_errors.py  test_agent_grammars.py  test_agent_parse.py  test_agent_tools.py  test_e2e.py  test_grammar_compliance.py  test_inference_grammar.py  test_optimise.py
text-to-dsl/tests/golden/: sphere_unit.dsl
text-to-dsl/workspace/: plan  scene.dsl
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: brep_renderer.ts  flatir.ts  main.ts  sceneServer.ts  types.ts  webgpu_renderer.ts
(+51 files in other folders)
